# simple-designer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANDATE.md  PASS_CONDITIONS.md  README.md  ROADMAP.md  index.html  vercel.json
ROADMAP/: 00_VISION_AND_PRINCIPLES.md  01_PHASE_1_CANVAS_FOUNDATION.md  02_PHASE_2_PROFESSIONAL_TOOLS.md  03_PHASE_3_VECTOR_TEXT.md  04_PHASE_4_ADVANCED_FEATURES.md  05_DEFERRED_COMPLEXITY.md  ARCHITECTURE_FILE_FORMAT.md  SUCCESS_METRICS.md
api/: nav.js
assets/: app.js
pages/cat.Canvas/infinite-canvas/: index.html
pages/cat.Core/base-ui/: index.html
rust-core/: Cargo.toml
rust-core/src/: lib.rs  spatial_index.rs  types.rs  viewport.rs
rust-core/tests/: types_test.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: batch_ops.rs  commands.rs  layer.rs  layer_tree.rs  main.rs  shape.rs  spatial_index.rs  viewport.rs
src-tauri/src/render/: geometry.rs  instanced.rs  mod.rs  pipeline.rs  shaders.wgsl
web-frontend/: index.html  package.json  tsconfig.json  vite.config.ts
web-frontend/public/: manifest.json
web-frontend/src/: App.tsx  Canvas.tsx  main.tsx  wasm.ts  webgl.ts
web-frontend/src/canvas/: viewport.ts
web-frontend/src/webgl/: geometry.ts  instanced.ts  shaders.ts
