[package]
name = "simple-designer"
version = "0.1.0"
description = "Open-source design tool"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Math & spatial
glam = "0.29"
rstar = "0.12"

# GPU rendering
wgpu = "23.0"
pollster = "0.4"
